# tachikoma-logs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  charts.py  generate.py  generate_demo.py  html_builder.py  log_parser.py  pyproject.toml  tips.py
.github/workflows/: ci.yml
docs/: demo.html
templates/: dashboard.html
tests/: test_e2e.py  test_log_parser.py  test_tips.py
